Colaboratory를 통해 생성됨

--- a/3장_2_데이터준비.ipynb
+++ b/3장_2_데이터준비.ipynb
@@ -21,29 +21,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BNxvCEuBWK52",
-        "outputId": "bc2a7ca5-df4f-49a7-8662-ee1734177b6d"
+        "outputId": "1ee5c966-44e3-40c4-ac61-f2b6771696cc"
       },
-      "execution_count": 1,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "NrJxI06eVY4e",
-        "outputId": "61b6ce4a-9cf8-456b-d2f1-2a87656d62e0"
+        "outputId": "75a3f83e-beff-49fa-bb63-645f9f417a74"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32b2a390-09a3-422c-ae1a-54f3f9f36f3c\">\n",
+              "  <div id=\"df-63e35649-0157-4a81-a218-c69a9f3e6415\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -209,7 +209,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32b2a390-09a3-422c-ae1a-54f3f9f36f3c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63e35649-0157-4a81-a218-c69a9f3e6415')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -260,12 +260,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-32b2a390-09a3-422c-ae1a-54f3f9f36f3c button.colab-df-convert');\n",
+              "          document.querySelector('#df-63e35649-0157-4a81-a218-c69a9f3e6415 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-32b2a390-09a3-422c-ae1a-54f3f9f36f3c');\n",
+              "          const element = document.querySelector('#df-63e35649-0157-4a81-a218-c69a9f3e6415');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -288,7 +288,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 68
         }
       ],
       "source": [
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,7 +360,7 @@
         "id": "YnAvvJveW4Rr",
         "outputId": "d6f9301f-fe2f-47e3-f0fa-c8cbdf621538"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "G1mfAA8aZbpH",
         "outputId": "9da49aff-e53e-4b4f-f80d-d7132b676f50"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1534,7 +1534,7 @@
         "id": "F7tPCVDHaFd3",
         "outputId": "58920efd-73ea-4e23-aded-559070466fe4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1561,7 +1561,7 @@
         "id": "KpEh2qB1c2cN",
         "outputId": "eb65c373-1192-4bd9-fbe8-0a47d86262c1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1956,7 +1956,7 @@
         "id": "J8WM8j-oc6vz",
         "outputId": "7087a873-c916-4bb7-f7cc-f6ca4dbbf70b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +1983,7 @@
         "id": "l2RpXhBZX8_4",
         "outputId": "883eed54-9981-49fc-a6d8-c3d531ae8fe2"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2378,7 +2378,7 @@
         "id": "rft3VPmIdeAM",
         "outputId": "8792db3c-3b3e-46f6-b2c6-70fb44f3591d"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2405,7 +2405,7 @@
         "id": "dVof-fAkZCYq",
         "outputId": "c5521c50-fb0f-4a32-da40-b624d401309a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2800,7 +2800,7 @@
         "id": "rnPV1BmGdk__",
         "outputId": "cd0b9bd6-4eff-425d-c95c-3d0661e67fc3"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2828,7 +2828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2855,7 +2855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2892,7 +2892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3160,7 +3160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3199,7 +3199,7 @@
         "id": "PoNnRT5zgJ9l",
         "outputId": "d8e61d6c-b2bd-43c1-ddac-3dd82a60c7ca"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3581,7 +3581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3841,7 +3841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4081,7 +4081,7 @@
         "id": "cqdqmR6Cj_Qn",
         "outputId": "0e9733c5-4fb5-429e-e731-69ba445021ad"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4394,7 +4394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4626,7 +4626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4867,7 +4867,7 @@
         "id": "fAOAYAWWkG0r",
         "outputId": "ce2f738f-a06b-44f4-c301-5f5492dac168"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5180,7 +5180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5486,7 +5486,7 @@
         "id": "TZnigc08kLWt",
         "outputId": "bde72435-01e6-4121-8f74-937253af4a8a"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5919,7 +5919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "8CKkJ7G6VY4l"
       },
@@ -5931,12 +5931,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
         "id": "N7oBGNqbVY4l"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# 보충지식1 데이터 결합\n",
+        "\n",
+        "A = pd.DataFrame({\"ID\": [1,2,3], \"성명\": [\"홍길동\", \"임꺽정\", \"서울 텔레컴\"]})\n",
+        "B = pd.DataFrame({\"ID\": [2,3,4], \"주소\": [\"강원도\", \"서울\", \"이스타섬\"]})\n",
+        "\n",
+        "inner_tab = pd.merge(A, B, on=\"ID\", how=\"inner\")  # ID 기준으로 일치\n",
+        "left_tab = pd.merge(A, B, on=\"ID\", how=\"left\")    # A 기준으로 일치\n",
+        "right_tab = pd.merge(A, B, on=\"ID\", how=\"right\")  # B 기준으로 일치\n",
+        "outer_tab = pd.merge(A, B, on=\"ID\", how=\"outer\")  # 전부 일치\n"
+      ]
     }
   ],
   "metadata": {
