Colaboratory를 통해 생성됨

--- a/3장_3_모델작성.ipynb
+++ b/3장_3_모델작성.ipynb
@@ -2001,7 +2001,11 @@
         "clf_best.fit(X, Y)\n",
         "\n",
         "# 영향이 높은 변수를 확인\n",
-        "pd.DataFrame(clf_best.feature_importances_ * 100).T"
+        "pd.DataFrame(clf_best.feature_importances_ * 100).T\n",
+        "\n",
+        "# 영향력이 낮은 변수는 그대로 사용하고 있기 때문에 영향력이 낮게 나온 것일수도 잇다. 좀 더 레벨이 높은 전처리르 사용해 기존변수로 부터 신규변수를 작성하면 신규변수는 영향력이 높은 것이될 가능성도 잇다. \n",
+        "\n",
+        "# 해당 변수가 어떤것이 매칭은 어떻게 확인할까?"
       ]
     },
     {
@@ -2035,6 +2039,15 @@
       "source": [
         "X"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tpKukv90_0DR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
